//plugins {
//    id 'com.android.application'
//}

apply plugin: 'com.android.application'

android {
    namespace 'com.kimjio.umamusumelocalify.settings'
    compileSdkVersion rootProject.ext.targetSdkVersion
    ndkVersion '29.0.14206865'

    defaultConfig {
        applicationId "com.kimjio.umamusumelocalify.settings"
        minSdk rootProject.ext.minSdkVersion
        targetSdk rootProject.ext.targetSdkVersion
        versionCode 16
        versionName "1.7.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        debug {
            pseudoLocalesEnabled true
            jniDebuggable true
        }
        release {
            pseudoLocalesEnabled true
            minifyEnabled true
            shrinkResources true
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    buildFeatures {
        buildConfig true
        dataBinding true
    }
    compileOptions {
        coreLibraryDesugaringEnabled true
        sourceCompatibility JavaVersion.VERSION_21
        targetCompatibility JavaVersion.VERSION_21
    }
    externalNativeBuild {
        cmake {
            path "src/main/cpp/CMakeLists.txt"
            version "4.1.2"
        }
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar','*.aar'])
//    constraints {
//        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:2.1.20") {
//            because("kotlin-stdlib-jdk7 is now a part of kotlin-stdlib")
//        }
//        implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8:2.1.20") {
//            because("kotlin-stdlib-jdk8 is now a part of kotlin-stdlib")
//        }
//    }
    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.5'
    implementation 'androidx.appcompat:appcompat:1.7.1'
    implementation 'com.google.android.material:material:1.14.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.2.1'
    implementation 'androidx.preference:preference:1.2.1'
    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0'
    implementation 'androidx.window:window:1.5.1'
    implementation 'androidx.documentfile:documentfile:1.1.0'
    implementation 'it.xabaras.android:recyclerview-swipedecorator:1.4'
    implementation 'org.msgpack:msgpack-core:0.9.12'
    implementation 'org.msgpack:jackson-dataformat-msgpack:0.9.12'
    implementation 'com.blacksquircle.ui:editorkit:2.9.0'
    implementation 'com.blacksquircle.ui:language-json:2.9.0'
    implementation "dev.rikka.shizuku:api:13.1.5"
    implementation "dev.rikka.shizuku:provider:13.1.5"
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.3.0'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0'
}